src/test/deca/context/valid/Obj/extends-methode.deca
// Description:
//    Déclaration d'une classe qui étend une autre classe et appel à une méthode de la superclasse
//
// Résultat:
//    Succès
//
class A {
    void methode(){}
}
class B extends A{}
{
    B b;
    b.methode();
}